# pynq

./: LICENSE  README.md  pyproject.toml
src/pynq/: Query.py  __init__.py  core.py  pyngrouping.py  pynquery.py
tests/: test_Query.py  test_core.py  test_data.py  test_pynquery.py
